Fixed planner container overflow

--- a/src/App.css
+++ b/src/App.css
@@ -58,14 +58,6 @@ input[type="number"] {
   width: 85%;
 }
 
-.main-parent-hive {
-  height: 100vh;
-}
-
-.main-hive {
-  height: 100%;
-}
-
 .light::after {
   cursor: pointer;
   content: "🌙";
@@ -390,7 +382,6 @@ input[type="number"] {
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 100vh;
 }
 
 .planner-container {
